🎈 New Feature: 作品(work)刪除categories只使用tags
由於作品不分類，所以無需使用categories，只使用不能點按的tags

--- a/_works/2018-01-01-blog.md
+++ b/_works/2018-01-01-blog.md
@@ -2,7 +2,7 @@
 layout: article_work
 title:  "此部落格網站製作過程"
 excerpt_separator: <!--more-->
-categories: cs jekyll
+tags: cs jekyll 
 ---
 
 使用`github`提供的`github page`，結合`jekyll`簡單製作出具個人風格的網頁。在這個專案中，主要熟悉`jekyll`的工作模式，可以設定好固定的版型後，直接套用在多個頁面上，也能有類似`物件導向`的class功能，能夠直接繼承版型，在該版型基礎上增減東西，除此之外，也讓我練習到版面設計及配色，以及網頁動畫等功能
