📜 New Post: 新增DistilBERT，以及excerpt摘要區塊
1. DistilBERT新文章
2. 摘要區塊
3. RoBERTa補摘要區塊

--- a/_posts/nlp/2019-10-30-RoBERTa.md
+++ b/_posts/nlp/2019-10-30-RoBERTa.md
@@ -56,11 +56,9 @@ tags: BERT RoBERTa dynamic-masking
 (3)會使用到跨文件的句子(並插入一個特殊的token來表示跨文件)，而(4)則是限制在同一份文件中，但在靠近文件結尾的地方，input長度可能會變得小於512，此時會提升Batch-size，但也因此使得batch-size變得不固定，在餘下的論文中使用(3)來進行實驗
 
 ### Training with large batches
-
 ---
-*Past work in Neural Machine Translation has shown that training with very large mini-batches can both improve optimization speed and end-task performance when the learning rate is increased appropriately (Ott et al., 2018).*
 
----
+{% include widget/excerpt.html text="We also studied whether we could add another step of distillation during the adaptation phase by fine-tuning DistilBERT on SQuAD using a BERT model previously fine-tuned on SQuAD as a teacher for an additional term in the loss (knowledge distillation). In this setting, there are thus two successive steps of distillation, one during the pre-training phase and one during the adaptation phase." %}
 
 所以將batch-size調高是能提升效能的，BERT的原始論文中使用的batch-size是256，在這邊改成使用2K跟8K，因為batch-size調高也意味著運算的step是減少的，所以整體的計算資源是相同的，此外，更大的batch-size能更容易被平行化運算(easier to parallelize via distributed data parallel training)，經過實驗後，發現提高batch-size至8K能夠減低MLM的困惑度(Perplexity)
 
