--- a/_posts/nlp/2019-12-02-ALBERT.md
+++ b/_posts/nlp/2019-12-02-ALBERT.md
@@ -3,7 +3,7 @@ layout: article_post
 title:  "ALBERT"
 categories: nlp 
 excerpt_separator: <!--more-->
-tags: BERT ALBERT 
+tags: BERT ALBERT SOP-loss parameter-sharing matrix-decomposition
 ---
 
 今天要整理的這篇ALBERT，利用一些技術減少原先BERT中的參數，並且改進在BERT中使用的NSP，提出了`SOP Loss`有效地提升了下游任務的表現。BERT雖然在很多NLP的任務上取得成功，但是由於其巨大的模型架構，很難被應用在講求速度的實際應用上，像是聊天機器人，所以近期有許多研究都是針對怎麼讓BERT更小，怎麼讓BERT訓練更快等等。ALBERT的預訓練模型以及相關程式碼都已經開源出來了，所以讓我們好好了解一下ALBERT，並且試試看拿它來取代原先我們模型中BERT的部分
