🎈 New Feature: 刪除highlight區塊，改成顯示全部文章

--- a/_posts/nlp/2019-07-20-PCA.md
+++ b/_posts/nlp/2019-07-20-PCA.md
@@ -4,6 +4,7 @@ title:  "PCA"
 categories: nlp math
 excerpt_separator: <!--more-->
 tags: PCA eigen-vector eigen-value data-visualization
+highlight: true
 ---
 
 PCA是一個非常有名的降維方法，我認為通過降維我們可以得到很多好處
