--- a/_posts/nlp/2019-10-30-RoBERTa.md
+++ b/_posts/nlp/2019-10-30-RoBERTa.md
@@ -4,6 +4,7 @@ title:  "RoBERTa"
 categories: nlp 
 excerpt_separator: <!--more-->
 tags: BERT RoBERTa dynamic-masking 
+highlight: true
 ---
 
 近幾年，隨著`ELMo`, `BERT`, `GPT`, `XLNet`等超大型模型在NLP任務上達到很好的成績，在許多資料集的Leaderboard上也都霸佔前幾名的位置:
