🎈 New Feature: 加入TAGS標籤預覽
在首頁可以看到所有TAGS，但無法點選

--- a/_posts/math/2018-05-01-MLE.md
+++ b/_posts/math/2018-05-01-MLE.md
@@ -2,7 +2,7 @@
 layout: article_post
 title:  "Maximum Likelihood Estimation(MLE)"
 categories: math
-tags: Prabability MLE Distribution Likelihood
+tags: Probability MLE Distribution Likelihood
 excerpt_separator: <!--more-->
 ---
 
