🐛 Bug Fix: 修正Bayes Classifier錯置模板

--- a/_works/2020-02-18-bayes.md
+++ b/_works/2020-02-18-bayes.md
@@ -1,5 +1,5 @@
 ---
-layout: article_post
+layout: article_work
 title:  "Naive Bayes Classifier"
 categories: cs
 tags: cs bayes language-model unsupervised-learning 
@@ -70,7 +70,7 @@ ___
 
 我們對一個輸入句子 `電腦每種顯卡的驅動程式都不同嗎`，進行貝葉斯分類，並用`熱點圖(heatmap)`來顯示不同主題下每個 $P(C_{j} \mid w_{i})$ 的對數機率
 
-{% include widget/photo.html url="https://imgur.com/osCdvSU" description="三種不同主題下的對數機率熱點圖" %}
+{% include widget/photo.html url="https://i.imgur.com/osCdvSU.png" description="三種不同主題下的對數機率熱點圖" %}
 
 可以看出，在電腦類(computer)的地方，對於像`驅動`、`程式`、`電腦`這類的關鍵字，會賦予極高的機率，相比於其他分類而言，因此我們可以得知這句話，是該分於電腦類
 
