🐛 Bug Fix: 修正表格會在手機版溢出問題
參考此網站: https://lcr.github.io/markdown-table-overflow/

--- a/_works/2017-06-11-LSH.md
+++ b/_works/2017-06-11-LSH.md
@@ -128,33 +128,53 @@ According to the Mathematic analysis in the content of the ppt, we derive a form
 
 `Rows=1000, r=5`
 
+<div class="table-wrapper" markdown="block">
+
 |:------------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|
 |  similarity  |   0.1   |   0.2   |   0.3   |   0.4   |   0.5   |   0.6   |   0.7   |   0.8   |   0.9   |
-|  possibility |  0.001  |   0.06  |    0.38 |    0.87 |    0.99 |    0.99 |     1   |     1   |     1   |
+|  possibility |  0.001  |   0.06  |    0.38 |    0.87 |    0.99 |    0.99 |     1   |     1   |     1   
+
+</div>  
 
 `Rows=500, r=5`
+
+<div class="table-wrapper" markdown="block">
 
 |:------------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|
 |  similarity  |   0.1   |   0.2   |   0.3   |   0.4   |   0.5   |   0.6   |   0.7   |   0.8   |   0.9   |
 |  possibility |  0.0009 |   0.03  |   0.215 |   0.64  |    0.95 |    0.99 |  0.99   |     1   |     1   |
 
+</div>  
+
 `Rows=100, r=5`
+
+<div class="table-wrapper" markdown="block">
 
 |:------------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|
 |  similarity  |   0.1   |   0.2   |   0.3   |   0.4   |   0.5   |   0.6   |   0.7   |   0.8   |   0.9   |
 |  possibility |  0.001  |  0.006  |   0.047 |   0.186 |    0.47 |   0.802 |  0.975  |   0.99  |     1   |
 
+</div>  
+
 `Rows=50, r=5`
+
+<div class="table-wrapper" markdown="block">
 
 |:------------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|
 |  similarity  |   0.1   |   0.2   |   0.3   |   0.4   |   0.5   |   0.6   |   0.7   |   0.8   |   0.9   |
 |  possibility |  0.001  |  0.006  |   0.003 | 0.0978  |  0.27   |    0.55 |  0.84   |  0.98   |   0.99  |
 
+</div>  
+
 `Rows=30, r=5`
+
+<div class="table-wrapper" markdown="block">
 
 |:------------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|
 |  similarity  |   0.1   |   0.2   |   0.3   |   0.4   |   0.5   |   0.6   |   0.7   |   0.8   |   0.9   |
 |  possibility |  0.001  |  0.0019 |   0.014 |    0.059|   0.173 |    0.38 |   0.66  |  0.907  |   0.99  |
+
+</div>  
 
 Thus, we can change the filtering threshold by changing the number of bands (permutations) to acquire the corresponding result we want. If we’re working on duplicated detection or plagiarism, we can set the permutation time to 30 or lower, while if the case is similar items recommendation, we can set the permutation time to 500 or even 1000.
 
