--- a/_posts/nlp/2020-02-20-BP.md
+++ b/_posts/nlp/2020-02-20-BP.md
@@ -28,7 +28,7 @@ $$ \textit{Backward Pass:  } = \frac{ \partial C}{ \partial z} = \frac{ \partial
 { \sigma(z) }' \frac{ \partial C}{ \partial y}
 $$
 
-$$ { \sigma(z) }' = ({ \frac{1}{1 + e^{-z}} })' = \frac{e^{-z}}{(1+e^{-z})^{2}}$$
+$$ { \sigma(z) }' = ({ \frac{1}{1 + e^{-z}} })' = \frac{e^{-z}}{(1+e^{-z})^{2}} = \sigma(z) (1 - \sigma(z))$$
 
 $$ \frac{ \partial C}{ \partial y} = \frac{ \partial Loss }{ \partial y} $$
 
