Update title settings.

--- a/_posts/nlp/2019-07-20-PCA.md
+++ b/_posts/nlp/2019-07-20-PCA.md
@@ -1,6 +1,6 @@
 ---
 layout: article_post
-title:  "PCA"
+title:  "PCA(Principal Component Analysis)"
 categories: nlp math
 excerpt_separator: <!--more-->
 tags: PCA eigen-vector eigen-value data-visualization
