--- a/_posts/nlp/2018-06-09-HMM.md
+++ b/_posts/nlp/2018-06-09-HMM.md
@@ -1,6 +1,6 @@
 ---
 layout: article_post
-title:  "HMM"
+title:  "HMM(Hidden Markov Model)"
 categories: cs nlp
 tags: hmm markov-chain
 excerpt_separator: <!--more-->
