--- a/_posts/nlp/2020-02-20-BP.md
+++ b/_posts/nlp/2020-02-20-BP.md
@@ -1,6 +1,6 @@
 ---
 layout: article_post
-title:  "Back Propagation"
+title:  "搞懂Back Propagation的微分推導過程"
 categories: cs nlp
 tags: back-propagtion loss-function optimization
 excerpt_separator: <!--more-->
