Add excerpt to BP.

--- a/_posts/nlp/2020-02-20-BP.md
+++ b/_posts/nlp/2020-02-20-BP.md
@@ -16,6 +16,8 @@ highlight: true
 
 假設一個簡單兩顆神經元$x_{1}, x_{2}$的神經網路，對於每顆神經元的更新$\frac{ \partial C}{ \partial w_{i}}$，可以分為`Forward Pass`及`Backward Pass`兩個步驟，`Forward Pass`非常容易計算，而`Backward`則是須從最後一層推回來，故得其名
 
+<!--more-->
+
 $$ Y = \sigma (Z) $$
 
 $$ Z = WX + B = w_{1}x_{1} + w_{2}x_{2} + b $$
