Update title of cm for SEO.

--- a/_posts/nlp/2019-10-25-cm.md
+++ b/_posts/nlp/2019-10-25-cm.md
@@ -1,9 +1,9 @@
 ---
 layout: article_post
-title:  "Confusion Matrix"
+title:  "混淆矩陣(Confusion Matrix)介紹"
 categories: nlp
 excerpt_separator: <!--more-->
-tags: Evaluation machine-learning 
+tags: Evaluation machine-learning confusion-matrix classifier
 ---
 
 在機器學習中，最常見的就是分類模型，像是垃圾郵件分類、手寫數字判定等等，那我們要怎麼去判定一個分類模型表現的到底好不好，基本上`混淆矩陣(confusion matrix)`的各項指標會被拿來參考，所以今天我們就來認識一下組成混淆矩陣的四個元素(TP,TN,FP,FN)吧
