--- a/_posts/nlp/2019-07-20-PCA.md
+++ b/_posts/nlp/2019-07-20-PCA.md
@@ -1,7 +1,8 @@
 ---
 layout: article_post
-title:  "PCA(Principal Component Analysis)"
+title:  "PCA - 主成分分析(Principal Component Analysis)"
 categories: nlp math
+description: "PCA(主成分分析)降維"
 excerpt_separator: <!--more-->
 tags: PCA eigen-vector eigen-value data-visualization
 highlight: true
